jesus tenha misericordia

--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -27,6 +27,16 @@ flutter:
     - assets/imagens/labmaker-logo.jpg
     - assets/imagens/labmaker-splash.png
     - assets/imagens/labmaker-navbar2.jpg
+    - assets/imagens/arduinokit.jpg
+    - assets/imagens/cortadora-laser.jpg
+    - assets/imagens/CR5proh.jpg
+    - assets/imagens/grmax5.jpg
+    - assets/imagens/ferro-de-solda.png
+    - assets/imagens/furadeira.jpg
+    - assets/imagens/labmaker.jpg
+    - assets/imagens/leoCampello.jpg
+    - assets/imagens/vicCarlos.jpg
+    - assets/imagens/viniEufrazio.jpg
 
 
 
