--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -37,6 +37,7 @@ flutter:
     - assets/imagens/leoCampello.jpg
     - assets/imagens/vicCarlos.jpg
     - assets/imagens/viniEufrazio.jpg
+    - assets/imagens/PLemos.jpg
 
 
 
