--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -33,7 +33,7 @@ flutter:
     - assets/imagens/grmax5.jpg
     - assets/imagens/ferro-de-solda.png
     - assets/imagens/furadeira.jpg
-    - assets/imagens/labmaker.jpg
+    - assets/imagens/labMaker.jpg
     - assets/imagens/leoCampello.jpg
     - assets/imagens/vicCarlos.jpg
     - assets/imagens/viniEufrazio.jpg
