--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -13,6 +13,8 @@ dependencies:
 
   cupertino_icons: ^1.0.2
   google_fonts: ^6.1.0
+  firebase_core: ^2.17.0
+  firebase_auth: ^4.10.1
 
 dev_dependencies:
   flutter_test:
