--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -17,6 +17,8 @@ dependencies:
   firebase_auth: ^4.10.1
   cloud_firestore: ^4.9.3
   firebase_database: ^10.2.7
+  firebase_storage: ^11.2.8
+  image_picker: ^1.0.4
 
 dev_dependencies:
   flutter_test:
