--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   firebase_database: ^10.2.7
   firebase_storage: ^11.2.8
   image_picker: ^1.0.4
+  flutter_spinkit: ^5.2.0
 
 dev_dependencies:
   flutter_test:
