--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -10,7 +10,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  postgres: ^2.0.0
   cupertino_icons: ^1.0.2
   google_fonts: ^6.1.0
   firebase_core: ^2.17.0
