--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
   flutter:
     sdk: flutter
   postgres: ^2.0.0
+  intro_views_flutter: ^3.2.0
   cupertino_icons: ^1.0.2
   google_fonts: ^6.1.0
   firebase_core: ^2.17.0
