--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -10,6 +10,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  http: 1.1.0
   postgres: ^2.0.0
   intro_views_flutter: ^3.2.0
   cupertino_icons: ^1.0.2
