--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   firebase_storage: ^11.2.8
   image_picker: ^1.0.4
   flutter_spinkit: ^5.2.0
+  firebase_messaging: ^14.7.9
 
 dev_dependencies:
   flutter_test:
