--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   image_picker: ^1.0.4
   flutter_spinkit: ^5.2.0
   firebase_messaging: ^14.7.9
+  fluttertoast: ^8.2.4
 
 dev_dependencies:
   flutter_test:
