--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -54,6 +54,9 @@ flutter:
     - assets/imagens/viniEufrazio.jpg
     - assets/imagens/PLemos.jpg
     - assets/imagens/github.png
+    - assets/imagens/instagram.png
+    - assets/imagens/linkedin.png
+
 
 
 
