--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -24,6 +24,8 @@ dependencies:
   flutter_spinkit: ^5.2.0
   firebase_messaging: ^14.7.9
   fluttertoast: ^8.2.4
+  intl: ^0.19.0
+  timezone: ^0.9.2
 
 
 
