--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -58,6 +58,7 @@ flutter:
     - assets/imagens/github.png
     - assets/imagens/instagram.png
     - assets/imagens/linkedin.png
+    - assets/imagens/felipe.jpg
 
 
 
