--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -27,6 +27,8 @@ dependencies:
   intl: ^0.19.0
   timezone: ^0.9.2
   shared_preferences: ^2.2.2
+  awesome_notifications: ^0.8.3
+  flutter_local_notifications: ^16.3.0
 
 
 
