--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -28,6 +28,8 @@ dependencies:
   timezone: ^0.9.2
   shared_preferences: ^2.2.2
   flutter_local_notifications: ^16.3.0
+  awesome_notifications_core: ^0.8.0 # <~ always ensure to use the latest version
+  awesome_notifications: 
 
 
 
