fotos da equipe maker

--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -63,6 +63,18 @@ flutter:
     - assets/imagens/instagram.png
     - assets/imagens/linkedin.png
     - assets/imagens/felipe.jpg
+    - assets/imagens/adeisa-guimaraes.jpeg
+    - assets/imagens/augusto-coimbra.jpeg
+    - assets/imagens/francenila-rodrigues.jpeg
+    - assets/imagens/francisco-kelsen.jpeg
+    - assets/imagens/handherson-damasceno.jpeg
+    - assets/imagens/marcelo-santos.jpeg
+    - assets/imagens/marcelo-souza.jpeg
+    - assets/imagens/marcos-padilha.jpeg
+    - assets/imagens/marinaldo.jpeg
+    - assets/imagens/pedro-davi.jpeg
+    - assets/imagens/thales-ferreira.jpeg
+    - assets/imagens/yanne-andrade.jpeg
 
 
 
