--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -75,6 +75,7 @@ flutter:
     - assets/imagens/pedro-davi.jpeg
     - assets/imagens/thales-ferreira.jpeg
     - assets/imagens/yanne-andrade.jpeg
+    - assets/imagens/alanny.jpg
 
 
 
