--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -26,6 +26,8 @@ dependencies:
   fluttertoast: ^8.2.4
   intl: ^0.19.0
   timezone: ^0.9.2
+  introduction_screen: ^3.1.12
+  showcaseview: ^2.0.3
   shared_preferences: ^2.2.2
   flutter_local_notifications: ^16.3.0
   awesome_notifications_core: ^0.8.0 # <~ always ensure to use the latest version
