--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   timezone: ^0.9.2
   introduction_screen: ^3.1.12
   showcaseview: ^2.0.3
+  flutter_email_sender: ^5.0.2
   shared_preferences: ^2.2.2
   flutter_local_notifications: ^16.3.0
   awesome_notifications_core: ^0.8.0 # <~ always ensure to use the latest version
