--- a/app/android/app/build.gradle
+++ b/app/android/app/build.gradle
@@ -53,7 +53,7 @@ android {
         // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-gradle-build-configuration.
         minSdkVersion 21
         targetSdkVersion 34
-        versionCode flutterVersionCode.toInteger()
+        versionCode 2
         versionName flutterVersionName
         multiDexEnabled true
     }
