--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -2,7 +2,7 @@ name: app
 description: A new Flutter project.
 
 publish_to: 'none'
-version: 1.0.2+1
+version: 2.0.0
 
 environment:
   sdk: '>=3.1.0-262.0.dev <4.0.0'
@@ -17,7 +17,7 @@ dependencies:
   google_fonts: ^6.1.0
   firebase_core: ^2.17.0
   firebase_auth: ^4.10.1
-  cloud_firestore: ^4.9.3
+  cloud_firestore: ^4.13.6
   firebase_database: ^10.2.7
   firebase_storage: ^11.2.8
   image_picker: ^1.0.4
